// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select default snapshot 1`] = `
<DocumentFragment>
  <div
    class="ventura select css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="ventura-select__control css-yk16xz-control"
    >
      <div
        class="ventura-select__value-container css-g1d714-ValueContainer"
      >
        <div
          class="ventura-select__placeholder css-1wa3eu0-placeholder"
        />
        <div
          class="css-b8ldur-Input"
        >
          <div
            class="ventura-select__input"
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-2-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="ventura-select__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select select with default value 1`] = `
<DocumentFragment>
  <div
    class="ventura select css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="ventura-select__control css-yk16xz-control"
    >
      <div
        class="ventura-select__value-container ventura-select__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          class="ventura-select__single-value css-1uccc91-singleValue"
        >
          Option 1
        </div>
        <div
          class="css-b8ldur-Input"
        >
          <div
            class="ventura-select__input"
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-3-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="ventura-select__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</DocumentFragment>
`;
